# createrepo_rs

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  README_zh.md  SECURITY.md  build.rs  flake.nix  lib.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
benchmark/: Dockerfile.createrepo_c  README.md  generate_rpms.sh  run_bench_c.sh  run_bench_rs.sh
cli/: mod.rs
compression/: bzip2.rs  gzip.rs  mod.rs  xz.rs  zstd.rs
db/: mod.rs
docker-test/: docker-compose.yml  nginx.conf  test.sh
packaging/: README.md
packaging/aur/: .SRCINFO  PKGBUILD
packaging/debian/: changelog  control  copyright
packaging/gentoo/app-admin/createrepo-rs/: createrepo-rs-0.1.9.ebuild  metadata.xml
packaging/homebrew/: createrepo-rs.rb
packaging/nix/: default.nix
packaging/rpm/: createrepo-rs.spec
pool/: mod.rs
rpm/: mod.rs
src/: lib.rs  main.rs
src/pool/: mod.rs
types/: mod.rs
walk/: mod.rs
xml/: error.rs  mod.rs  parse.rs  repomd.rs
xml/dump/: filelists.rs  mod.rs  other.rs  primary.rs  repomd.rs
